<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/service_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.services.ServiceFragment">

    <LinearLayout
        android:id="@+id/try_again_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/fira_sans_medium"
            android:textColor="@color/orange_80"
            android:textSize="42sp"
            android:layout_marginBottom="50dp"
            android:text="@string/location_services"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_sans_medium"
            android:text="@string/location_request_string"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:layout_marginVertical="20dp"
            android:layout_gravity="center"
            android:padding="12dp"
            app:icon="@drawable/ic_location"
            android:textSize="16sp"/>

    </LinearLayout>

</FrameLayout>