<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.tracker.TrackerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--TIMER -->

        <LinearLayout
            android:id="@+id/tracker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bluegray_80"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/icon_for_timer"
                android:src="@drawable/ic_timer"
                app:tint="@color/white" />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_default_string"
                android:layout_marginEnd="28dp"
                android:fontFamily="sans-serif-thin"
                android:paddingHorizontal="2dp"
                android:textColor="@color/gray_10"
                android:textSize="64sp" />

            <!--<TextView
                android:id="@+id/timer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:fontFamily="sans-serif-thin"
                android:paddingHorizontal="2dp"
                android:text="@string/timer_default_string"
                android:textColor="@color/gray_10"
                android:textSize="64sp" />-->

        </LinearLayout>

        <!--LOCATION INFO REGION -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Izzy.Title"
                android:text="@string/location"/>

            <!-- LONGITUDE LATITUDE -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:paddingVertical="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/longitude_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Izzy.Headline1"
                        android:text="@string/default_location_string"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"
                        android:textAppearance="@style/TextAppearance.Izzy.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/latitude_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Izzy.Headline1"
                        android:text="@string/default_location_string"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"
                        android:textAppearance="@style/TextAppearance.Izzy.Caption"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:paddingVertical="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/speed_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Izzy.Headline1"
                        android:text="@string/default_speed_string"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textAppearance="@style/TextAppearance.Izzy.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/accuracy_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Izzy.Headline1"
                        android:text="@string/default_speed_string"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accuracy"
                        android:textAppearance="@style/TextAppearance.Izzy.Caption"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:paddingVertical="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/altitude_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Izzy.Headline1"
                        android:text="@string/default_speed_string"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/altitude"
                        android:textSize="12sp"
                        android:textAppearance="@style/TextAppearance.Izzy.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bearing_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Izzy.Headline1"
                        android:text="@string/default_speed_string"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bearing"
                        android:textAppearance="@style/TextAppearance.Izzy.Caption"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
</FrameLayout>